--- a/templates/components/admin/edit_post.html
+++ b/templates/components/admin/edit_post.html
@@ -3,7 +3,7 @@
 <!-- Main form for post data -->
 <form id="post-form" hx-patch="/api/admin/post/{{ .Post.ID }}" hx-swap="none" hx-indicator="#save-indicator"></form>
 
-<div class="flex h-[calc(100vh-100px)] gap-6 overflow-hidden">
+<div class="flex gap-6">
     <!-- Left Column: Title and Content -->
     <div class="flex-1 flex flex-col bg-white shadow-md rounded overflow-hidden">
         <div class="p-4 border-b">
@@ -44,11 +44,33 @@
                         id="visibility" name="visibility">
                         <option value="public" {{ if eq .Post.Visibility "public" }}selected{{ end }}>Public</option>
                         <option value="hide" {{ if eq .Post.Visibility "hide" }}selected{{ end }}>Hide</option>
-                        <option value="login" {{ if eq .Post.Visibility "login" }}selected{{ end }}>Login Required
-                        </option>
-                        <option value="password" {{ if eq .Post.Visibility "password" }}selected{{ end }}>Password
-                            Protected</option>
                         <option value="private" {{ if eq .Post.Visibility "private" }}selected{{ end }}>Private</option>
+                    </select>
+                </div>
+            </div>
+
+            <div>
+                <label class="block text-gray-600 text-xs font-bold mb-1" for="protect">Protect</label>
+                <div class="relative">
+                    <select form="post-form"
+                        class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 text-sm leading-tight focus:outline-none focus:shadow-outline bg-white"
+                        id="protect" name="protect">
+                        <option value="none" {{ if eq .Post.Protect "none" }}selected{{ end }}>None</option>
+                        <option value="login" {{ if eq .Post.Protect "login" }}selected{{ end }}>Login Required</option>
+                        <option value="password" {{ if eq .Post.Protect "password" }}selected{{ end }}>Password
+                            Protected</option>
+                    </select>
+                </div>
+            </div>
+
+            <div>
+                <label class="block text-gray-600 text-xs font-bold mb-1" for="state">State</label>
+                <div class="relative">
+                    <select form="post-form"
+                        class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 text-sm leading-tight focus:outline-none focus:shadow-outline bg-white"
+                        id="state" name="state">
+                        <option value="draft" {{ if eq .Post.State "draft" }}selected{{ end }}>Draft</option>
+                        <option value="release" {{ if eq .Post.State "release" }}selected{{ end }}>Published</option>
                     </select>
                 </div>
             </div>
